--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Nunito:wght@300;400&display=swap');
 
-/* :root {
-  --blue: #1e90ff;
-  --white: #ffffff;
-} */
 
 body{
   background-color: rgb(255, 255, 255);
 
-  /* background-image: url('../public/images/background.jpg'); 
-  background-size: cover;
-  background-position: center;
-  background-repeat: repeat;
-   */
 }
 
 
@@ -190,12 +181,22 @@ a{
   overflow: hidden;
   display: flex;
   justify-content: center;
+  border-radius: 15%;
+
 
 }
 .accordion-content div img{
   border-radius: 15%;
 }
-
+.accordion-content div span{
+  font-size: .5rem;
+  z-index: 100;
+  color: black;
+  background-color: #e0ade7;
+  height: fit-content;
+  width: 5rem;
+  border-radius: 5% ;
+}
 .scaleImage{
   transform: scale(1.5);
 
@@ -226,6 +227,17 @@ a{
   max-height: 1000px; /* Set max-height to 1000px when active */
 }
 
+.codeLink{
+  margin-left: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+
+}
+
+.alert{
+  max-height: 2rem;
+  font-size: .8rem;
+  }
 
 .contact-info a{
   font-weight: bolder;
@@ -381,15 +393,21 @@ a{
     margin: .2rem 2rem;
   }
 
+  .accordion-content div span{
+    font-size: .6rem;
+    width: 8rem;
+
+  }
+
   /*hover animations*/
   .navbar button:hover , .contact-info a:hover{
     transform: scale(1.1);
     filter: saturate(1.5);
     filter: drop-shadow(5px 5px 7px #120115);
   }
-  /* #smlogo:hover{
+  #smlogo:hover{
     transform: rotate(118deg);
-  } */
+  }
 
 
 
@@ -446,8 +464,8 @@ a{
 
 
   .head-container p {
-  font-size: 1.4rem;  
-  padding: 0rem 2rem;
+    font-size: 1.4rem;  
+    padding: 0rem 2rem;
   } 
 
 
@@ -493,8 +511,10 @@ a{
     padding: 0rem 2rem;
 
   }
-  .accordion-content div img{
-    transform: scale(1);
+
+
+ #serviceimages:hover {
+  scale: (1.5);
  }
 
  /*double column grid*/
