--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Nunito:wght@300;400&display=swap');
+
+@font-face {
+  font-family: Gloss-and-Bloom;
+  src: url('../public/Fonts/Gloss_And_Bloom.ttf');
+}
+
+@font-face {
+  font-family: Gotham-Black;
+  src: url('../public/Fonts/Gotham-Black.otf');
+}
+@font-face {
+  font-family: Gotham-Bold;
+  src: url('../public/Fonts/Gotham-Bold.otf');
+}
+@font-face {
+  font-family: Gotham-Thin;
+  src: url('../public/Fonts/Gotham-Thin.otf');
+}
+@font-face {
+  font-family: Gotham-Light;
+  src: url('../public/Fonts/Gotham-Light.otf');
+}
 
 
+
+:root{
+  --green: #08aea7;
+  --cleargreen: #6fc4c1;
+  --gray:#b4b4b4;
+  --cleargray:#e2ebeb;
+
+}
+
+
+/* control */
 body{
   background-color: rgb(255, 255, 255);
 
@@ -9,7 +41,7 @@ body{
 
 .head-container {
   /* background-color: #120115; */
-  background-image: url('../public/images/whitelogo.jpg');  /* Adjust the path accordingly */
+  background-image: url('../public/images/backgroundHead.png');  
   background-size: 12.8rem 12rem;
   background-repeat: no-repeat;
   background-position: 11.5rem -1.2rem;
@@ -19,29 +51,30 @@ body{
   font-size: .8rem;
   width: 12.5rem;
   color: #2d032d;
-  font-family: Nunito;
-  background: linear-gradient(267deg, rgba(255,255,255,1) 0%, rgba(239,230,240,1) 53%);
+  font-family:Gotham-Light;
+  background: linear-gradient(267deg, rgb(255, 255, 255) 0%, var(--cleargreen) 93%);
   margin-top: 2.2rem;
   padding: 0rem .5rem;
   }  
+
+
 .navbar{
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
   /* background-color: rgb(204, 220, 241); */
 
-  background-color: #f4d5f3e8;
+  background-color: var(--cleargreen);
 }
 .navbar button{
-  background: linear-gradient(319deg, rgba(100,60,132,0.1) 10%, rgba(60,32,68,.1) 30%), rgb(116,21,76, .3)80%;
-
+background-color: var(--green);
   color: #ffffffe8;
   /* margin: .1rem; */
   font-size: .8rem;
   border: none;
   border-radius: 25px;
-  font-family: Nunito;
-  filter: drop-shadow(3px 3px 5px #120115);
+  font-family: Gotham-Bold;
+  filter: drop-shadow(3px 3px 5px var(--cleargray));
 
 }
 
@@ -59,12 +92,27 @@ body{
   animation-timeline: scroll();
 }
 
-#head-image, #head-image2{
+
+#head-content{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+#head-image{
+  width: 30vw;
+ position: absolute;
+ top: 8vh;
+ left: 60vw;
+
+}
+
+ #head-image2{
   display: none;
 }
 .social-head{
   /* background-color: rgba(240, 248, 255, 0.138); */
-  background-color: #f4d5f3e8;
+  background-color: var(--cleargray);
 
   margin-top: -1rem;
   font-size: 1.3rem;
@@ -76,7 +124,7 @@ body{
 .social-head a{
   margin: 0 1.5rem;
   transition: all .3s ease-out;
-  color: #58415b;
+  color: black;
 }
 
 a{
@@ -126,7 +174,7 @@ a{
   lightWhats 1.5s ease-out infinite,
   slideToRight .5s ease-in-out forwards;
   padding: .9vw;
-  background-color: #f4d5f3e8;
+  background-color: var(--cleargray);
 
   z-index: 1000;
   border-radius: 10%;
@@ -138,19 +186,21 @@ a{
 } */
 
 .allProducts-container, .allServices-container, .contact-container{
-  background-color: #ddd5f8ce;
+  background-color: white;
   padding: .5rem;
-  font-family: Nunito;
-  color: #2d032d;
+  font-family: Gotham-Black;
+  color: black;
 }
-
+.allProducts-container h2, .contact-container h3, .allServices-container h2{
+  font-family: Gloss-and-Bloom;
+}
 .allServices-container{
   padding: 3rem .5rem;
 
 
 }
 .accordion{
-  background: linear-gradient(319deg, rgba(100,60,132,0.15) 10%, rgba(60,32,68,.5) 30%), rgb(116,21,76, .3)80%;
+  background: linear-gradient(319deg, var(--green) 10%, var(--cleargreen) 30%), white 80%;
   padding: .5rem;
   margin: .2rem 0rem;
   border-radius: 5px;
@@ -199,6 +249,12 @@ a{
 }
 .scaleImage{
   transform: scale(1.5);
+
+
+}
+
+.scaleImageServices{
+  transform: scale(2.5);
 
 
 }
@@ -274,9 +330,9 @@ a{
 
 @media only screen and (min-width: 700px) {
   .head-container {
-    background-image: url('../public/images/logotablet.jpg');  /* Adjust the path accordingly */
-    background-position: 14rem -4rem;
-    background-size:43rem;
+    background-image: url('../public/images/bigBackgroundHead.png');  /* Adjust the path accordingly */
+    background-position: 17rem 3rem;
+    background-size: 43rem;
   
   }
 
@@ -301,8 +357,6 @@ a{
 
     .allProducts-container h2, .contact-container h3, .allServices-container h2{
       font-size: 2.5rem;
-
-
     }
 
      .accordion p{
@@ -327,21 +381,30 @@ a{
       font-size: 1.7rem;
     }
 
-
+    #head-image{
+      display: none; 
+      /* margin-bottom: -.5rem;
+      margin-right: -25rem;
+      transform: rotate(5deg);
+      z-index: 1; */
+  
+      /* filter: blur(2px) */
+    } 
+  
 
     .accordion-content div{
       width: 100%;
     }
 
     .accordion-content div img{
-       transform: scale(1.5);
+       transform: scale(1.1);
     }
 
     
  }
 
 
- /* for big ipads */
+ /* for laptop */
 
 @media only screen and (min-width: 990px) {
 
@@ -360,8 +423,8 @@ a{
 
   .head-container {
 
-    background-position: 11rem -1rem;
-    background-size:43rem;
+    background-position: 21rem 1rem;
+    background-size:49rem;
   
   }
 
@@ -415,7 +478,7 @@ a{
 
   .social-head a:hover{
     transform: scale(1.2);
-    color: #e0ade7;
+    color: var(--green);
     filter: drop-shadow(5px 5px 5px #0d050f);
 
   }
@@ -425,7 +488,7 @@ a{
   .accordion h5:hover, .accordion:hover,  #allServices-container:hover{
     transform: scale(1.02);
     filter: saturate(2);
-    filter: drop-shadow(5px 5px 7px #7f5f85);
+    filter: drop-shadow(5px 5px 7px var(--cleargreen));
 
   }
   .accordion:hover{
@@ -442,22 +505,12 @@ a{
   body{
     background: linear-gradient(90deg, rgba(255,255,255,1) 50%, rgba(247,202,252,1) 73%); 
   }
-  #head-image{
-    display: block; 
-    opacity:.9 ;  
-    margin-bottom: -.5rem;
-    margin-right: -25rem;
-    transform: rotate(5deg);
-    z-index: 1;
-
-    /* filter: blur(2px) */
-  } 
 
   .head-container{
-    background-image: url('../public/images/whitelogo.jpg');  /* Adjust the path accordingly */
+    /* background-image: url('../public/images/whitelogo.jpg');   */
 
-    background-position: 20rem .5rem;
-    background-size: 22rem;
+    background-position: 25rem .5rem;
+    background-size: 55rem;
 
   }
 
