--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   font-family: Gloss-and-Bloom;
   src: url('../public/Fonts/Gloss_And_Bloom.ttf');
 }
+@font-face {
+  font-family: Gotham-Condensed;
+  src: url('../public/Fonts/Gotham\ Condensed\ Medium.otf');
+}
 
 @font-face {
   font-family: Gotham-Black;
@@ -35,12 +39,10 @@
 /* control */
 body{
   background-color: rgb(255, 255, 255);
-  width:77% ;
 }
 
 
 .head-container {
-  /* background-color: #120115; */
   background-image: url('../public/images/backgroundHead.png');  
   background-size: 12.8rem 12rem;
   background-repeat: no-repeat;
@@ -50,8 +52,9 @@ body{
 .head-container p {
   font-size: .8rem;
   width: 12.5rem;
-  color: #2d032d;
-  font-family:Gotham-Light;
+  color: black;
+  font-family: Gotham-Light;
+  font-weight: 900;
   background: linear-gradient(267deg, rgb(255, 255, 255) 0%, var(--cleargreen) 93%);
   margin-top: 2.2rem;
   padding: 0rem .5rem;
@@ -62,18 +65,16 @@ body{
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
-  /* background-color: rgb(204, 220, 241); */
-
   background-color: var(--cleargreen);
 }
 .navbar button{
 background-color: var(--green);
   color: #ffffffe8;
   /* margin: .1rem; */
-  font-size: .8rem;
+  font-size: .6rem;
   border: none;
   border-radius: 25px;
-  font-family: Gotham-Bold;
+  font-family: Gloss-and-Bloom;
   filter: drop-shadow(3px 3px 5px var(--cleargray));
 
 }
@@ -225,8 +226,13 @@ a{
 .accordion-content{
   color: rgb(255, 255, 255);
 } 
+
+.accordion-content p{
+  font-size: 3.5vw;
+
+}
 .accordion-content div{
-  height: 8rem ;
+  height: auto ;
   width:20rem ;
   overflow: hidden;
   display: flex;
@@ -235,14 +241,16 @@ a{
 
 
 }
+
 .accordion-content div img{
   border-radius: 15%;
+  width: 50vw;
 }
 .accordion-content div span{
   font-size: .5rem;
   z-index: 100;
   color: black;
-  background-color: #e0ade7;
+  background-color: var(--green);
   height: fit-content;
   width: 5rem;
   border-radius: 5% ;
@@ -374,9 +382,6 @@ a{
     }
 
 
-    /* .contact-info{
-      background-color: #a83717;
-    } */
     .contact-info h6{
       font-size: 1.7rem;
     }
@@ -433,6 +438,41 @@ a{
     cursor: pointer;
   }
 
+  .accordions-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  
+  }
+
+  .accordion h5 p{
+    font-size: 2vw;
+  }
+  
+  
+
+  
+  .accordion-content p{
+    font-size: 1.5vw;
+
+  }
+  .accordion-content div{
+    height: auto ;
+    width:21vw ;
+    margin: auto;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    border-radius: 5%;
+    border: solid;
+
+  } 
+  
+  .accordion-content div img{
+    border-radius: 5%;
+    width: 20vw;
+    height: auto;
+  }
+
   .presentaciones-tooltip {
     display: block;
     position: absolute;
@@ -440,10 +480,8 @@ a{
     left: 10%;
     font-size: .7rem;
     transform: translate(10px, -50%);
-    /* background-color: rgba(0, 0, 0, 0.8); */
     color: #fff;
     padding: 5px;
-    /* white-space: nowrap; */
     z-index: 1;
   }
 
@@ -469,7 +507,7 @@ a{
     filter: drop-shadow(5px 5px 7px #120115);
   }
   #smlogo:hover{
-    transform: rotate(118deg);
+    scale: 1.1;
   }
 
 
@@ -496,6 +534,10 @@ a{
     color: white;
   }
 
+  .accordion-content div:hover{
+    scale: 1.3;
+  }
+
 }
 
 
@@ -503,8 +545,7 @@ a{
 @media only screen and (min-width: 1200px) {
 
   body{
-    background: linear-gradient(90deg, rgba(255,255,255,1) 50%, rgba(247,202,252,1) 73%); 
-  }
+background-color: var(--green);  }
 
   .head-container{
     /* background-image: url('../public/images/whitelogo.jpg');   */
