--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   --cleargreen: #6fc4c1;
   --gray:#b4b4b4;
   --cleargray:#e2ebeb;
-
+  --darkgreen:#208a88;
 }
 
 
@@ -113,7 +113,7 @@ background-color: var(--green);
 }
 .social-head{
   /* background-color: rgba(240, 248, 255, 0.138); */
-  background-color: var(--cleargray);
+  background-color: var(--cleargreen);
 
   margin-top: -1rem;
   font-size: 1.3rem;
@@ -397,13 +397,9 @@ a{
     } 
   
 
-    .accordion-content div{
-      width: 100%;
-    }
-
-    .accordion-content div img{
+    /* .accordion-content div img{
        transform: scale(1.1);
-    }
+    } */
 
     
  }
@@ -456,14 +452,12 @@ a{
 
   }
   .accordion-content div{
-    height: auto ;
-    width:21vw ;
+    height: fit-content ;
+    width : 24vw ;
     margin: auto;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
+    overflow: auto;
+
     border-radius: 5%;
-    border: solid;
 
   } 
   
@@ -500,6 +494,12 @@ a{
 
   }
 
+  .contact-container{
+    padding-top: 5vw;
+    padding-bottom: 5vw;
+
+  }
+
   /*hover animations*/
   .navbar button:hover , .contact-info a:hover{
     transform: scale(1.1);
@@ -510,18 +510,12 @@ a{
     scale: 1.1;
   }
 
-
-
-
-
   .social-head a:hover{
     transform: scale(1.2);
     color: var(--green);
     filter: drop-shadow(5px 5px 5px #0d050f);
 
   }
-
-
 
   .accordion h5:hover, .accordion:hover,  #allServices-container:hover{
     transform: scale(1.02);
@@ -534,7 +528,7 @@ a{
     color: white;
   }
 
-  .accordion-content div:hover{
+  .productsImg:hover{
     scale: 1.3;
   }
 
@@ -545,7 +539,7 @@ a{
 @media only screen and (min-width: 1200px) {
 
   body{
-background-color: var(--green);  }
+background-color: var(--darkgreen);  }
 
   .head-container{
     /* background-image: url('../public/images/whitelogo.jpg');   */
@@ -607,9 +601,6 @@ background-color: var(--green);  }
   }
 
 
- #serviceimages:hover {
-  scale: (1.5);
- }
 
  /*double column grid*/
  .accordions-container {
@@ -629,7 +620,7 @@ background-color: var(--green);  }
 
   .accordion-content div {
     border-radius: 3rem;
-    height: 10rem;
+    height: auto;
   }
 
 
