--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ background-color: var(--green);
   width: 2rem;
   filter: drop-shadow(3px 3px 5px #120115);
   animation: rotate auto linear;
-  animation-timeline: scroll();
+  animation-timeline: scroll(root);
 }
 
 
@@ -295,6 +295,15 @@ a{
   max-height: 1000px; /* Set max-height to 1000px when active */
 }
 
+
+.bannermid{
+  width: 85vw;
+  margin-inline: 4.5vw;
+  height: auto;
+  margin-bottom: 5vw;
+  border-radius: 5%;
+}
+
 .codeLink{
   margin-left: 1rem;
   font-size: 1.5rem;
@@ -315,6 +324,8 @@ a{
 border: solid .5vh var(--green);
 border-radius: 5%;
 margin: 1vw;
+padding: 1vw;
+
 
   }
 
@@ -374,6 +385,13 @@ margin: 1vw;
       width: 3rem;
     }
 
+    .social-head a{
+      font-size: larger;
+
+      margin: 0 3.5rem;
+    }
+
+
     .allProducts-container p, .allServices-container p{
       font-size: 1.7rem;
     }
@@ -390,12 +408,14 @@ margin: 1vw;
       font-size: 2rem;
 
     }
-    .social-head a{
-      font-size: larger;
 
-      margin: 0 3.5rem;
+    .bannermid{
+      width: 35vw;
+      margin-inline: 31vw;
+      margin-bottom: 5vw;
+      border-radius: 5%;
     }
-
+ 
 
     .contact-info h6{
       font-size: 1.7rem;
