--- a/src/App.css
+++ b/src/App.css
@@ -302,6 +302,8 @@ a{
   height: auto;
   margin-bottom: 5vw;
   border-radius: 5%;
+  filter: drop-shadow(5px 5px 7px #080009);
+
 }
 
 .codeLink{
@@ -412,8 +414,9 @@ padding: 1vw;
     .bannermid{
       width: 35vw;
       margin-inline: 31vw;
-      margin-bottom: 5vw;
-      border-radius: 5%;
+      filter: drop-shadow(5vw 50px 100px var(--darkgreen));
+
+
     }
  
 
@@ -539,7 +542,7 @@ padding: 1vw;
   .navbar button:hover , .contact-info a:hover{
     transform: scale(1.1);
     filter: saturate(1.5);
-    filter: drop-shadow(5px 5px 7px #120115);
+    filter: drop-shadow(5px 5px 7px var(--darkgreen));
   }
   #smlogo:hover{
     scale: 1.1;
@@ -548,7 +551,7 @@ padding: 1vw;
   .social-head a:hover{
     transform: scale(1.2);
     color: var(--green);
-    filter: drop-shadow(5px 5px 5px #0d050f);
+    filter: drop-shadow(5px 5px 5px var(--darkgreen));
 
   }
 
