--- a/src/App.css
+++ b/src/App.css
@@ -247,8 +247,17 @@ a{
 }
 
 .accordion-content div img{
-  border-radius: 15%;
+  border-radius: 10%;
   width: 50vw;
+}
+
+.productsImg:hover{
+  scale: 1.7;
+
+}
+
+.productsImg{
+  transition: scale .2s ease;
 }
 .accordion-content div span{
   font-size: .5rem;
@@ -295,16 +304,73 @@ a{
   max-height: 1000px; /* Set max-height to 1000px when active */
 }
 
-
-.bannermid{
-  width: 85vw;
-  margin-inline: 4.5vw;
-  height: auto;
-  margin-bottom: 5vw;
-  border-radius: 5%;
-  filter: drop-shadow(5px 5px 7px #080009);
+.bannersDiv {
+  margin-top: 0;
+  margin-bottom: 10vw;
+  display: flex; /* Ensure images are aligned horizontally */
+  align-items: center;
+  justify-content: center;
+  perspective: 90vw; /* Adjust the value for more or less depth */
 
 }
+
+.bannerImg {
+  width: 30vw;
+  margin-inline: 2vw;
+  height: auto;
+  border-radius: 5%;
+  filter: drop-shadow(-10px 10px 7px var(--darkgreen));
+  transition: all 0.3s ease; /* Smooth transition for hover effects */
+}
+
+
+.bannersDiv img:nth-child(1){
+  z-index: 100;
+}
+
+
+.bannersDiv img:nth-child(1):hover {
+  transform: scale(1.2);
+  filter: drop-shadow(1px 1px 12px var(--darkgreen));
+
+  margin-right: -5vw;
+
+}
+
+.bannersDiv img:nth-child(3):hover {
+  transform: scale(1.2);
+  filter: drop-shadow(1px 1px 12px var(--darkgreen));
+
+  margin-left: -9vw;
+}
+
+.bannersDiv img:nth-child(2):hover {
+  transform: scale(1.2);
+  filter: drop-shadow(1px 1px 12px var(--darkgreen));
+
+}
+
+
+
+.defaultRotation {
+  transform: rotateY(50deg); /* Slight rotation by default for img1 and img3 */
+}
+
+
+.rotateTo80 {
+  transform: rotateY(60deg);
+}
+
+.rotateTo0 {
+  transform: rotateY(0deg);
+}
+
+img.hovered1,
+img.hovered2,
+img.hovered3 {
+  transform: rotateY(0deg);
+}
+
 
 .codeLink{
   margin-left: 1rem;
@@ -320,6 +386,8 @@ a{
 
   .contact-container{
     padding-top: 4vw;
+    background-image: url('../public/images/contact.jpg');
+    background-size: cover;
   }
 
   .contact-container div{
@@ -327,6 +395,8 @@ border: solid .5vh var(--green);
 border-radius: 5%;
 margin: 1vw;
 padding: 1vw;
+backdrop-filter: blur(10px); 
+background-color: rgba(255, 255, 255, 0.101);
 
 
   }
@@ -422,6 +492,10 @@ padding: 1vw;
 
     .contact-info h6{
       font-size: 1.7rem;
+    }
+
+    .contact-info p{
+      font-size: 2vw;
     }
 
     #head-image{
@@ -567,7 +641,7 @@ padding: 1vw;
   }
 
   .productsImg:hover{
-    scale: 1.3;
+    scale: 2;
   }
 
 }
