--- a/src/App.css
+++ b/src/App.css
@@ -498,6 +498,10 @@ background-color: rgba(255, 255, 255, 0.101);
       font-size: 2vw;
     }
 
+    #head-image{
+      display: none; 
+
+    } 
   
 
 
